creada carpeta de imagenes con el logo

--- a/web.html
+++ b/web.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
+  <img src="imagenes/logo.png" width="700" height="142"> 
+  <h1>UjiGym</h1>
+  <p>My first paragraph</p>
+  <a href="https://google.com">link a google </a>
 </html> 
