--- a/web.html
+++ b/web.html
@@ -4,6 +4,8 @@
 
   <img src="imagenes/logo.png" width="700" height="142"> 
   <h1>UjiGym</h1>
-  <p>My first paragraph</p>
-  <a href="https://google.com">link a google </a>
+  <p>Activa tu cuerpo, entrena tu mente</p>
+  <p>Nuestros servicios</p>
+  <p>Contacta con nosotros</p>
+  <a href="https://www.w3schools.com">Reserva una sesión</a>
 </html> 
